--- a/site/entry.html
+++ b/site/entry.html
@@ -4,15 +4,17 @@
   <meta charset="utf-8" />
   <title>Entry</title>
   <link rel="stylesheet" href="styles.css" />
-  <!-- Mol* -->
+  <!-- Mol* (first try) -->
   <script src="https://unpkg.com/molstar/build/viewer/molstar.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/molstar/build/viewer/molstar.css" />
+  <!-- 3Dmol.js (fallback) -->
+  <script src="https://unpkg.com/3dmol/build/3Dmol-min.js"></script>
 </head>
 <body>
   <a href="index.html">← Back</a>
   <h1 id="title"></h1>
 
-  <div id="viewer" style="width:100%; height:600px; border:1px solid #ddd;"></div>
+  <div id="viewer" style="width:100%; height:600px; border:1px solid #ddd; position:relative;"></div>
   <div id="err" style="color:#b00020; margin-top:8px;"></div>
 
   <h2>Sequence (FASTA)</h2>
@@ -23,41 +25,53 @@
 
     async function load(){
       const uid = getParam('uid');
-      const catalog = await fetch('../data/entries.json?b=3').then(r => r.json());
-      const entry = catalog.entries.find(e => e.uniprot_id === uid);
       const err = document.getElementById('err');
+      const title = document.getElementById('title');
+      const viewerDiv = document.getElementById('viewer');
 
-      if(!entry){
-        document.body.innerHTML = "Not found";
-        return;
-      }
+      const catalog = await fetch('../data/entries.json?b=4').then(r => r.json());
+      const entry = catalog.entries.find(e => e.uniprot_id === uid);
 
-      document.getElementById('title').textContent = uid;
+      if(!entry){ document.body.innerHTML = "Not found"; return; }
+      title.textContent = uid;
 
       // Show FASTA text
       fetch(entry.files.sequence_fasta)
         .then(r => r.text())
         .then(t => { document.getElementById('fasta').textContent = t; })
-        .catch(e => { document.getElementById('fasta').textContent = 'FASTA not available.'; });
+        .catch(() => { document.getElementById('fasta').textContent = 'FASTA not available.'; });
 
-      // Mol* viewer
-      const viewer = new molstar.Viewer('viewer', { layoutIsExpanded:false, layoutShowControls:true });
+      const url = entry.files.structure_cif;
 
-      // Try mmcif first, then fallback to cif
+      // --- Try Mol* first (both mmcif and cif) ---
       try {
-        await viewer.loadStructureFromUrl(entry.files.structure_cif, 'mmcif');
-      } catch (e1) {
-        console.warn('mmcif failed, retrying as cif', e1);
+        const mv = new molstar.Viewer(viewerDiv, { layoutIsExpanded:false, layoutShowControls:true });
         try {
-          await viewer.loadStructureFromUrl(entry.files.structure_cif, 'cif');
-        } catch (e2) {
-          console.error('cif also failed', e2);
-          err.textContent = 'Could not load structure (tried mmCIF then CIF). See Console for details.';
-          return;
+          await mv.loadStructureFromUrl(url, 'mmcif');
+        } catch(mm) {
+          console.warn('Mol* mmcif failed, retrying as cif', mm);
+          await mv.loadStructureFromUrl(url, 'cif');
         }
+        mv.resetCamera();
+        return; // success with Mol*
+      } catch (e) {
+        console.warn('Mol* failed, falling back to 3Dmol.js', e);
       }
 
-      viewer.resetCamera();
+      // --- Fallback: 3Dmol.js ---
+      try {
+        const v = $3Dmol.createViewer(viewerDiv, { backgroundAlpha: 1 });
+        // Try as mmCIF then CIF (3Dmol autodetects reasonably well but we’ll hint).
+        const model = await v.addModelFromUrl(url, 'mmcif')
+          .catch(() => v.addModelFromUrl(url, 'cif'));
+        // Basic nice-looking style
+        v.setStyle({}, {cartoon:{}});
+        v.zoomTo();
+        v.render();
+      } catch (e2) {
+        console.error('3Dmol fallback also failed', e2);
+        err.textContent = 'Could not load structure in the browser (tried Mol* and 3Dmol). Open the CIF link above to verify the file.';
+      }
     }
 
     load();
