--- a/site/entry.html
+++ b/site/entry.html
@@ -1,3 +1,4 @@
+<!-- site/entry.html — replace entire file -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -13,19 +14,11 @@
       margin-bottom: 16px;
       background: #fff;
     }
-    #viewer-frame {
-      width: 100%;
-      height: 640px;  /* adjust height if you want */
-      border: 0;
-      display: block;
-    }
-    .meta {
-      display: flex; gap: 12px; align-items: center;
-      margin: 8px 0 16px;
-    }
+    #viewer-frame { width: 100%; height: 640px; border: 0; display: block; }
+    .meta { display: flex; gap: 12px; align-items: center; margin: 8px 0 16px; }
     .meta a { text-decoration: none; }
-    pre { white-space: pre-wrap; }
     .error { color:#b00020; margin-top:8px; }
+    .btn { padding: 6px 10px; border:1px solid #ddd; border-radius:6px; cursor:pointer; }
   </style>
 </head>
 <body>
@@ -33,13 +26,14 @@
   <h1 id="title"></h1>
 
   <div class="viewer-card">
-    <iframe id="viewer-frame" src="viewer-frame.html"></iframe>
+    <iframe id="viewer-frame" src="about:blank"></iframe>
   </div>
 
   <div class="meta">
     <strong>Files:</strong>
     <a id="cifLink"   target="_blank" rel="noopener">CIF</a>
     <a id="fastaLink" target="_blank" rel="noopener">FASTA</a>
+    <button id="copyBtn" class="btn" type="button">Copy FASTA</button>
   </div>
 
   <div id="err" class="error"></div>
@@ -51,20 +45,21 @@
     function getParam(name){ return new URL(location.href).searchParams.get(name); }
 
     async function load(){
-      const uid = getParam('uid');
-      const errEl = document.getElementById('err');
-      const titleEl = document.getElementById('title');
-      const fastaEl = document.getElementById('fasta');
-      const cifLink = document.getElementById('cifLink');
-      const fastaLink = document.getElementById('fastaLink');
-      const frame = document.getElementById('viewer-frame');
+      const uid      = getParam('uid');
+      const errEl    = document.getElementById('err');
+      const titleEl  = document.getElementById('title');
+      const fastaEl  = document.getElementById('fasta');
+      const cifLink  = document.getElementById('cifLink');
+      const fastaLink= document.getElementById('fastaLink');
+      const frame    = document.getElementById('viewer-frame');
+      const copyBtn  = document.getElementById('copyBtn');
 
       titleEl.textContent = uid || '(missing uid)';
 
-      // Load catalog (add a cache-buster)
+      // cache-bust catalog
       let catalog;
       try {
-        catalog = await fetch('../data/entries.json?v=seq1').then(r=>r.json());
+        catalog = await fetch('../data/entries.json?v=' + Date.now()).then(r=>r.json());
       } catch {
         errEl.textContent = 'Could not load entries.json.'; return;
       }
@@ -80,16 +75,23 @@
       try {
         const t = await fetch(entry.files.sequence_fasta).then(r=>r.text());
         fastaEl.textContent = t;
+        copyBtn.onclick = async () => {
+          await navigator.clipboard.writeText(t);
+          copyBtn.textContent = 'Copied!';
+          setTimeout(()=> (copyBtn.textContent = 'Copy FASTA'), 1200);
+        };
       } catch {
         fastaEl.textContent = 'FASTA not available.';
+        copyBtn.disabled = true;
       }
 
       // Point the iframe to viewer-frame.html with the CIF URL as query param
       const encodedUrl = encodeURIComponent(entry.files.structure_cif);
-      frame.src = `viewer-frame.html?url=${encodedUrl}`;
+      frame.src = `viewer-frame.html?url=${encodedUrl}&v=1`;
     }
 
     load();
   </script>
 </body>
 </html>
+
