--- a/site/viewer-frame.html
+++ b/site/viewer-frame.html
@@ -2,61 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mol* Viewer Frame</title>
+  <title>Mol* Viewer Frame (Minimal)</title>
 
-  <!-- Use the same CDN as your working example -->
-  <script src="https://unpkg.com/pdbe-molstar@latest/build/pdbe-molstar-plugin.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/pdbe-molstar@latest/build/pdbe-molstar.css" />
+  <!-- Pin a stable PDBe Mol* plugin version -->
+  <script src="https://unpkg.com/pdbe-molstar@3.1.0/build/pdbe-molstar-plugin.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/pdbe-molstar@3.1.0/build/pdbe-molstar.css" />
 
   <style>
     html, body { margin: 0; height: 100%; width: 100%; }
-    #viewer-container { width: 100%; height: calc(100% - 28px); }
-    #status { font: 12px/28px -apple-system, system-ui, sans-serif; padding: 0 8px; color: #555; border-bottom: 1px solid #eee; }
+    #viewer-container { width: 100%; height: 100%; }
+
+    /* Safety net: hide any residual UI if the plugin adds it */
+    .msp-controls,
+    .msp-right-panel,
+    .msp-left-panel,
+    .msp-bottom-panel,
+    .msp-layout-controls,
+    .msp-help-toast { display: none !important; }
+
+    /* Make sure the viewport fills the box */
+    #viewer-container .msp-viewport,
+    #viewer-container canvas {
+      width: 100% !important;
+      height: 100% !important;
+      max-width: 100% !important;
+      max-height: 100% !important;
+    }
   </style>
 </head>
 <body>
-  <div id="status">loading…</div>
   <div id="viewer-container"></div>
-
   <script>
-    const log = (msg) => { const s = document.getElementById('status'); s.textContent = msg; console.log('[viewer-frame]', msg); };
-    const params = new URL(location.href).searchParams;
-    const pdb = params.get('pdb');
-    const url = params.get('url');
-
     const viewer = new PDBeMolstarPlugin();
 
-    // Always render once to initialize UI
-    viewer.render('viewer-container', { ui: true, bgColor: { r:255, g:255, b:255 } });
+    function getParam(name){ return new URL(location.href).searchParams.get(name); }
+    const url = getParam('url');
+    const fmt = getParam('format'); // optional override: 'cif' or 'mmcif'
 
-    (async () => {
-      try {
-        if (pdb) {
-          log(`loading PDB: ${pdb}`);
-          viewer.render('viewer-container', { moleculeId: pdb, ui: true, bgColor: { r:255, g:255, b:255 } });
-          return;
-        }
+    // 1) Initialize with no UI so only the rendering viewport shows
+    viewer.render('viewer-container', {
+      ui: false,                         // << minimal mode
+      layoutShowControls: false,
+      viewportShowExpand: false,
+      layoutIsExpanded: false,
+      bgColor: { r:255, g:255, b:255 }
+    });
 
-        if (url) {
-          log('loading from URL (mmcif)…');
-          try {
-            viewer.render('viewer-container', { customData: { url, format: 'mmcif' }, ui: true, bgColor: { r:255, g:255, b:255 } });
-            log('loaded as mmcif');
-          } catch (e1) {
-            console.warn('mmcif failed, retrying as cif', e1);
-            log('loading from URL (cif)…');
-            viewer.render('viewer-container', { customData: { url, format: 'cif' }, ui: true, bgColor: { r:255, g:255, b:255 } });
-            log('loaded as cif');
-          }
-          return;
-        }
+    // 2) Load the structure (try mmcif then cif unless format is forced)
+    function load(format){
+      return viewer.render('viewer-container', {
+        ui: false,
+        layoutShowControls: false,
+        viewportShowExpand: false,
+        layoutIsExpanded: false,
+        bgColor: { r:255, g:255, b:255 },
+        ...(url ? { customData: { url, format } } : {})
+      });
+    }
 
-        log('no ?pdb= or ?url= given');
-      } catch (e) {
-        console.error('viewer error', e);
-        log('error — open console');
+    if (url) {
+      if (fmt) {
+        load(fmt);
+      } else {
+        try { load('mmcif'); }
+        catch(e1) { try { load('cif'); } catch(e2) { /* noop */ } }
       }
-    })();
+    }
   </script>
 </body>
 </html>
