--- a/site/entry.html
+++ b/site/entry.html
@@ -4,63 +4,124 @@
   <meta charset="utf-8" />
   <title>Entry</title>
   <link rel="stylesheet" href="styles.css" />
+  <!-- PDBe Mol* (pinned) -->
+  <script src="https://unpkg.com/pdbe-molstar@3.7.1/build/pdbe-molstar-plugin.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/pdbe-molstar@3.7.1/build/pdbe-molstar-light.css" />
+
   <style>
-    .viewer-card {
-      width: 100%;
-      border: 1px solid #ddd;
+    :root { --gap: 12px; --card-border: #ddd; }
+    html, body { height: 100%; margin: 0; background: #fff; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
+
+    /* Header */
+    .topbar { display: flex; align-items: center; gap: 12px; padding: 12px 16px; border-bottom: 1px solid var(--card-border); }
+    .topbar a { text-decoration: none; }
+    .title { font-size: 20px; font-weight: 600; margin: 0; }
+
+    /* 2-column layout */
+    .main {
+      height: calc(100vh - 54px); /* header height allowance */
+      display: flex;
+      gap: var(--gap);
+      padding: var(--gap);
+      box-sizing: border-box;
+    }
+    .col {
+      flex: 1 1 50%;
+      min-width: 0; /* allow content to shrink */
+      display: flex;
+      flex-direction: column;
+      border: 1px solid var(--card-border);
       border-radius: 8px;
       overflow: hidden;
-      margin-bottom: 16px;
       background: #fff;
     }
-    #viewer-frame {
-      width: 100%;
-      height: 640px;  /* adjust height if you want */
-      border: 0;
-      display: block;
+
+    /* Left: Mol* viewer fills column */
+    #viewer-wrap { position: relative; flex: 1 1 auto; }
+    #viewer { position: absolute; inset: 0; }
+    /* Ensure the canvas always fills */
+    #viewer .msp-viewport, #viewer canvas {
+      width: 100% !important;
+      height: 100% !important;
+      max-width: 100% !important;
+      max-height: 100% !important;
     }
-    .meta {
-      display: flex; gap: 12px; align-items: center;
-      margin: 8px 0 16px;
+
+    /* Hide Mol* UI chrome to keep a clean canvas */
+    .msp-left-panel,.msp-right-panel,.msp-bottom-panel,
+    .msp-layout-controls,.msp-viewport-controls,
+    .msp-plugin-ui,.msp-controls,.msp-controls-wrapper,.msp-help-toast {
+      display: none !important;
+      visibility: hidden !important;
+      pointer-events: none !important;
     }
-    .meta a { text-decoration: none; }
-    .error { color:#b00020; margin-top:8px; }
-    .btn { padding: 6px 10px; border:1px solid #ddd; border-radius:6px; cursor:pointer; }
-    pre { white-space: pre-wrap; }
+
+    /* Right: sequence panel */
+    .seq-header {
+      display: flex; align-items: center; gap: 12px;
+      padding: 10px 12px; border-bottom: 1px solid var(--card-border);
+      background: #fafafa;
+      flex-wrap: wrap;
+    }
+    .seq-header strong { margin-right: 4px; }
+    .seq-header a { text-decoration: none; }
+    .btn {
+      padding: 6px 10px; border: 1px solid var(--card-border); border-radius: 6px; cursor: pointer; background: #fff;
+    }
+    .seq-body {
+      flex: 1 1 auto;
+      overflow: auto;
+      padding: 12px;
+    }
+    pre { margin: 0; white-space: pre-wrap; word-break: break-word; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; }
+
+    /* Error banner */
+    .error { color: #b00020; padding: 8px 12px; border-top: 1px solid var(--card-border); background: #fff7f7; }
   </style>
 </head>
 <body>
-  <a href="index.html">← Back</a>
-  <h1 id="title"></h1>
-
-  <div class="viewer-card">
-    <iframe id="viewer-frame" src="about:blank" title="Mol* Viewer (minimal)"></iframe>
+  <div class="topbar">
+    <a href="index.html">← Back</a>
+    <h1 id="title" class="title"></h1>
   </div>
 
-  <div class="meta">
-    <strong>Files:</strong>
-    <a id="cifLink"   target="_blank" rel="noopener">CIF</a>
-    <a id="fastaLink" target="_blank" rel="noopener">FASTA</a>
-    <button id="copyBtn" class="btn" type="button">Copy FASTA</button>
+  <div class="main">
+    <!-- Left: Mol* viewer -->
+    <div class="col">
+      <div id="viewer-wrap">
+        <div id="viewer"></div>
+      </div>
+      <div id="viewer-error" class="error" style="display:none;"></div>
+    </div>
+
+    <!-- Right: sequence + links -->
+    <div class="col">
+      <div class="seq-header">
+        <strong>Files:</strong>
+        <a id="cifLink"   target="_blank" rel="noopener">CIF</a>
+        <a id="fastaLink" target="_blank" rel="noopener">FASTA</a>
+        <button id="copyBtn" class="btn" type="button">Copy FASTA</button>
+      </div>
+      <div class="seq-body">
+        <pre id="fasta">Loading...</pre>
+      </div>
+      <div id="seq-error" class="error" style="display:none;"></div>
+    </div>
   </div>
-
-  <div id="err" class="error"></div>
-
-  <h2>Sequence (FASTA)</h2>
-  <pre id="fasta">Loading...</pre>
 
   <script>
     function getParam(name){ return new URL(location.href).searchParams.get(name); }
 
     async function load(){
-      const uid      = getParam('uid');
-      const errEl    = document.getElementById('err');
-      const titleEl  = document.getElementById('title');
-      const fastaEl  = document.getElementById('fasta');
-      const cifLink  = document.getElementById('cifLink');
-      const fastaLink= document.getElementById('fastaLink');
-      const frame    = document.getElementById('viewer-frame');
-      const copyBtn  = document.getElementById('copyBtn');
+      const uid = getParam('uid');
+      const titleEl = document.getElementById('title');
+      const fastaEl = document.getElementById('fasta');
+      const copyBtn = document.getElementById('copyBtn');
+      const cifLink = document.getElementById('cifLink');
+      const fastaLink = document.getElementById('fastaLink');
+      const viewerErr = document.getElementById('viewer-error');
+      const seqErr = document.getElementById('seq-error');
 
       titleEl.textContent = uid || '(missing uid)';
 
@@ -68,42 +129,118 @@
       let catalog;
       try {
         catalog = await fetch('../data/entries.json?v=' + Date.now()).then(r=>r.json());
-      } catch {
-        errEl.textContent = 'Could not load entries.json.'; return;
+      } catch (e) {
+        // Show errors on both sides
+        viewerErr.style.display = 'block';
+        seqErr.style.display = 'block';
+        viewerErr.textContent = 'Could not load entries.json.';
+        seqErr.textContent = 'Could not load entries.json.';
+        return;
       }
 
       const entry = (catalog.entries || []).find(e => e.uniprot_id === uid);
-      if(!entry){ errEl.textContent = 'Entry not found in catalog.'; return; }
+      if(!entry){
+        viewerErr.style.display = 'block';
+        seqErr.style.display = 'block';
+        viewerErr.textContent = 'Entry not found in catalog.';
+        seqErr.textContent = 'Entry not found in catalog.';
+        return;
+      }
 
-      // Wire file links
       const cifUrl   = entry.files.structure_cif;
       const fastaUrl = entry.files.sequence_fasta;
+
+      // Wire file links
       cifLink.href   = cifUrl;
       fastaLink.href = fastaUrl;
 
-      // Show FASTA text
+      // ---- Right: FASTA ----
       try {
         const t = await fetch(fastaUrl).then(r=>r.text());
         fastaEl.textContent = t;
         copyBtn.onclick = async () => {
-          await navigator.clipboard.writeText(t);
-          copyBtn.textContent = 'Copied!';
-          setTimeout(()=> (copyBtn.textContent = 'Copy FASTA'), 1200);
+          try {
+            await navigator.clipboard.writeText(t);
+            const prev = copyBtn.textContent;
+            copyBtn.textContent = 'Copied!';
+            setTimeout(()=> (copyBtn.textContent = prev), 1200);
+          } catch {}
         };
       } catch {
-        fastaEl.textContent = 'FASTA not available.';
+        fastaEl.textContent = '';
+        seqErr.style.display = 'block';
+        seqErr.textContent = 'FASTA not available.';
         copyBtn.disabled = true;
       }
 
-      // Build Mol* hosted viewer URL in "minimal" mode
-      // Prefer mmCIF; if you KNOW some are legacy PDB/CIF, change 'mmcif' to 'cif' for those.
-      const encodedCif = encodeURIComponent(cifUrl);
-      const viewerUrl =
-        `https://molstar.org/viewer/?structure-url=${encodedCif}` +
-        `&structure-url-format=mmcif&hide-controls=1`;
+      // ---- Left: PDBe Mol* (direct, no iframe) ----
+      // Decide format from extension; default mmcif
+      const fmt = (cifUrl.toLowerCase().endsWith('.cif') && !cifUrl.toLowerCase().endsWith('.mmcif')) ? 'cif' : 'mmcif';
 
-      // Load into the iframe
-      frame.src = viewerUrl;
+      let viewer;
+      try {
+        viewer = new PDBeMolstarPlugin();
+      } catch (e) {
+        viewerErr.style.display = 'block';
+        viewerErr.textContent = 'Failed to create PDBe Mol* plugin.';
+        return;
+      }
+
+      // Minimal, robust options
+      const options = {
+        customData: { url: cifUrl, format: fmt },
+        hideControls: true,          // hide UI chrome
+        expanded: false,             // keep compact layout
+        bgColor: { r:255, g:255, b:255 } // white background
+        // You can add: visualStyle: 'cartoon'  // PDBe option; defaults are good
+      };
+
+      try {
+        viewer.render('viewer', options);
+      } catch (e) {
+        viewerErr.style.display = 'block';
+        viewerErr.textContent = 'Mol* render error.';
+        return;
+      }
+
+      // Defensive: if PDBe injects controls later, hide again
+      const root = document.getElementById('viewer');
+      const hideChrome = () => {
+        [
+          '.msp-left-panel','.msp-right-panel','.msp-bottom-panel',
+          '.msp-layout-controls','.msp-viewport-controls',
+          '.msp-plugin-ui','.msp-controls','.msp-controls-wrapper','.msp-help-toast'
+        ].forEach(sel => {
+          document.querySelectorAll(sel).forEach(el => {
+            el.style.display='none'; el.style.visibility='hidden'; el.style.pointerEvents='none';
+          });
+        });
+      };
+      hideChrome(); setTimeout(hideChrome, 100); setTimeout(hideChrome, 500);
+      new MutationObserver(hideChrome).observe(root, { childList:true, subtree:true });
+
+      // (Optional) Best-effort: mild ambient light + outline + uniform color
+      // Safe to leave in; if unsupported in this build, it’s ignored.
+      function styleScene() {
+        try {
+          const plugin = viewer?.viewerInstance?.plugin;
+          const c3d = plugin?.canvas3d;
+          if (c3d?.setProps) {
+            c3d.setProps({
+              renderer: { ambientIntensity: 0.6 }, // “soft” feel
+              postprocessing: { outline: { enable: true, scale: 1.0, threshold: 0.8 } }
+            });
+          }
+          // Uniform color (steel blue) if accessible
+          const reps = plugin?.managers?.structure?.representation?.componentReprs || [];
+          const val = { r: 70/255, g: 130/255, b: 180/255 };
+          reps.forEach(cr => {
+            try { cr.setTheme?.({ color: { name: 'uniform', params: { value: val } } }); } catch {}
+          });
+        } catch {}
+      }
+      setTimeout(styleScene, 400);
+      setTimeout(styleScene, 1200);
     }
 
     load();
