--- a/site/entry.html
+++ b/site/entry.html
@@ -4,98 +4,75 @@
   <meta charset="utf-8" />
   <title>Entry</title>
   <link rel="stylesheet" href="styles.css" />
-  <!-- ProtVista (PDBe PDB Component Library) -->
-  <link rel="preconnect" href="https://www.ebi.ac.uk">
-  <script src="https://www.ebi.ac.uk/pdbe/pdb-component-library/js/protvista-pdb-3.3.0.js" defer></script>
+  <!-- PDBe Mol* (light theme) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pdbe-molstar@latest/build/pdbe-molstar-light.css">
+  <script src="https://cdn.jsdelivr.net/npm/pdbe-molstar@latest/build/pdbe-molstar-plugin.js"></script>
+
+  <!-- PDB ProtVista (sequence viewer) -->
+  <!-- Using a known version that supports custom-data viewerdata -->
+  <script src="https://www.ebi.ac.uk/pdbe/pdb-component-library/js/protvista-pdb-3.3.0.js"></script>
 
   <style>
     :root { --gap: 16px; }
-    body { margin: 0; }
+    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
     .page {
-      padding: 16px;
-    }
-    .topbar a { text-decoration: none; }
-    .grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: var(--gap);
-      align-items: start;
+      padding: 16px;
     }
-    @media (max-width: 1000px) {
-      .grid { grid-template-columns: 1fr; }
+    @media (max-width: 900px) {
+      .page { grid-template-columns: 1fr; }
     }
-    .card {
-      border: 1px solid #ddd;
-      border-radius: 8px;
+    .panel {
       background: #fff;
+      border: 1px solid #e5e5e5;
+      border-radius: 8px;
       overflow: hidden;
     }
-    .card-body { padding: 12px; }
-
-    /* Viewer card */
-    .viewer {
-      display: flex;
-      flex-direction: column;
+    header {
+      display:flex; align-items:center; gap:8px;
+      padding: 12px 16px; border-bottom:1px solid #eee; background:#fafafa;
     }
-    #viewer-frame {
-      width: 100%;
-      height: 640px;
-      border: 0;
-      display: block;
-    }
-
-    /* Sequence side */
-    .meta {
-      display: flex; gap: 12px; align-items: center;
-      margin: 8px 0 16px;
-    }
-    .meta a { text-decoration: none; }
-    .btn { padding: 6px 10px; border:1px solid #ddd; border-radius:6px; cursor:pointer; background:#fafafa; }
-    .btn:disabled { opacity: 0.6; cursor: default; }
-    .error { color:#b00020; margin-top:8px; }
-    pre { white-space: pre-wrap; }
-
-    /* Give ProtVista some vertical room */
-    protvista-pdb {
-      display: block;
-      min-height: 360px; /* increase if you want more tracks visible */
-      border: 1px solid #eee;
-      border-radius: 6px;
-    }
+    header a { text-decoration: none; }
+    h1 { font-size: 18px; margin: 0; font-weight: 600; }
+    .viewer-wrap { height: 640px; }
+    #molstar { width:100%; height:100%; position:relative; }
+    .seq-wrap { height: 640px; display:flex; flex-direction:column; }
+    .seq-inner { padding: 0 12px 12px; overflow:auto; height:100%; }
+    .meta { display:flex; gap:12px; align-items:center; padding: 12px 16px; border-top:1px solid #eee; }
+    .btn { padding: 6px 10px; border:1px solid #ddd; border-radius:6px; cursor:pointer; background:#fff; }
+    .error { color:#b00020; padding: 8px 16px; }
+    .muted { color:#666; font-size: 13px; }
   </style>
 </head>
 <body>
+  <header>
+    <a href="index.html">← Back</a>
+    <h1 id="title" aria-live="polite"></h1>
+    <span class="muted" id="uidNote"></span>
+  </header>
+
   <div class="page">
-    <div class="topbar">
-      <a href="index.html">← Back</a>
-      <h1 id="title" style="margin: 12px 0 16px;"></h1>
+    <!-- Left: Mol* -->
+    <div class="panel">
+      <div class="viewer-wrap">
+        <div id="molstar" aria-label="3D structure viewer"></div>
+      </div>
+      <div class="meta">
+        <strong>Files:</strong>
+        <a id="cifLink" target="_blank" rel="noopener">CIF</a>
+        <a id="fastaLink" target="_blank" rel="noopener">FASTA</a>
+        <button id="copyBtn" class="btn" type="button">Copy FASTA</button>
+      </div>
+      <div id="err" class="error" role="alert" aria-live="assertive"></div>
     </div>
 
-    <div class="grid">
-      <!-- LEFT: Mol* minimal (your existing, stable approach) -->
-      <div class="card viewer">
-        <iframe id="viewer-frame" src="about:blank" title="Mol* Viewer (minimal)"></iframe>
-      </div>
-
-      <!-- RIGHT: Interactive sequence (ProtVista) + FASTA & actions -->
-      <div class="card">
-        <div class="card-body">
-          <div class="meta">
-            <strong>Files:</strong>
-            <a id="cifLink"   target="_blank" rel="noopener">CIF</a>
-            <a id="fastaLink" target="_blank" rel="noopener">FASTA</a>
-            <button id="copyBtn" class="btn" type="button">Copy FASTA</button>
-          </div>
-
-          <div id="err" class="error"></div>
-
-          <!-- ProtVista: interactive sequence/feature viewer like AlphaFold -->
-          <!-- We set the 'accession' attribute from JS after we know the UID -->
-          <protvista-pdb id="pv"></protvista-pdb>
-
-          <h2 style="margin-top:16px;">Sequence (FASTA)</h2>
-          <pre id="fasta">Loading...</pre>
-        </div>
+    <!-- Right: ProtVista sequence viewer -->
+    <div class="panel seq-wrap">
+      <div class="seq-inner">
+        <!-- Custom-data mode lets us inject our sequence and tracks -->
+        <protvista-pdb id="pv" custom-data="true" subscribe-events="true"></protvista-pdb>
       </div>
     </div>
   </div>
@@ -104,78 +81,97 @@
     function getParam(name){ return new URL(location.href).searchParams.get(name); }
 
     async function load(){
-      const uid      = getParam('uid');
-      const titleEl  = document.getElementById('title');
-      const fastaEl  = document.getElementById('fasta');
-      const cifLink  = document.getElementById('cifLink');
-      const fastaLink= document.getElementById('fastaLink');
-      const frame    = document.getElementById('viewer-frame');
-      const copyBtn  = document.getElementById('copyBtn');
-      const errEl    = document.getElementById('err');
-      const pv       = document.getElementById('pv');
+      const uid       = getParam('uid');
+      const titleEl   = document.getElementById('title');
+      const uidNoteEl = document.getElementById('uidNote');
+      const errEl     = document.getElementById('err');
+      const cifLink   = document.getElementById('cifLink');
+      const fastaLink = document.getElementById('fastaLink');
+      const copyBtn   = document.getElementById('copyBtn');
+      const pvEl      = document.getElementById('pv');
+      const molDiv    = document.getElementById('molstar');
 
       titleEl.textContent = uid || '(missing uid)';
+      uidNoteEl.textContent = uid ? ` · UniProt ID ${uid}` : '';
 
-      // Load catalog (with cache-buster)
-      let catalog;
+      // Load entries.json (cache-busted)
+      let entry;
       try {
-        catalog = await fetch('../data/entries.json?v=' + Date.now()).then(r=>r.json());
-      } catch {
-        errEl.textContent = 'Could not load entries.json.';
+        const catalog = await fetch('../data/entries.json?v=' + Date.now()).then(r=>r.json());
+        entry = (catalog.entries || []).find(e => e.uniprot_id === uid);
+        if (!entry) throw new Error('not-in-catalog');
+      } catch (e) {
+        errEl.textContent = 'Could not find this entry in entries.json.';
         return;
       }
 
-      const entry = (catalog.entries || []).find(e => e.uniprot_id === uid);
-      if(!entry){ errEl.textContent = 'Entry not found in catalog.'; return; }
-
-      // Wire file links
       const cifUrl   = entry.files.structure_cif;
       const fastaUrl = entry.files.sequence_fasta;
       cifLink.href   = cifUrl;
       fastaLink.href = fastaUrl;
 
-      // FASTA text + copy button
+      // Fetch FASTA and turn into a single sequence string
+      let fastaText = '';
+      let sequence  = '';
       try {
-        const t = await fetch(fastaUrl).then(r=>r.text());
-        fastaEl.textContent = t;
-        copyBtn.onclick = async () => {
-          await navigator.clipboard.writeText(t);
-          const prev = copyBtn.textContent;
-          copyBtn.textContent = 'Copied!';
-          setTimeout(()=> (copyBtn.textContent = prev), 1200);
-        };
+        fastaText = await fetch(fastaUrl).then(r => r.text());
+        sequence  = fastaText
+          .split(/\r?\n/)
+          .filter((ln, i) => !(i === 0 && ln.startsWith('>')))
+          .join('')
+          .replace(/\s+/g, '')
+          .toUpperCase();
       } catch {
-        fastaEl.textContent = 'FASTA not available.';
+        // ok to proceed without sequence; viewer still loads
+      }
+
+      // Copy FASTA button
+      if (fastaText) {
+        copyBtn.onclick = async () => {
+          try {
+            await navigator.clipboard.writeText(fastaText);
+            copyBtn.textContent = 'Copied!';
+            setTimeout(()=> (copyBtn.textContent = 'Copy FASTA'), 1200);
+          } catch {}
+        };
+      } else {
         copyBtn.disabled = true;
       }
 
-      // --- Mol* minimal viewer in iframe (your current, working approach) ---
-      const encodedCif = encodeURIComponent(cifUrl);
-      const viewerUrl =
-        `https://molstar.org/viewer/?structure-url=${encodedCif}` +
-        `&structure-url-format=mmcif` +
-        `&hide-controls=1` +
-        `&representation=cartoon&color-theme=uniform&color-value=0x4682B4&bgcolor=white&outline=1&lighting=soft`;
-      frame.src = viewerUrl;
+      // ---- 3D: PDBe Mol* (minimal look, white bg, soft lighting) ----
+      const viewer = new PDBeMolstarPlugin();
+      const options = {
+        customData: { url: cifUrl, format: 'cif' },  // your CIF URL
+        hideControls: true,                           // minimal UI
+        leftPanel: false,
+        rightPanel: false,
+        sequencePanel: false,
+        bgColor: 'white',
+        lighting: 'matte',                            // soft lighting; other: 'flat'|'glossy'...
+        visualStyle: 'cartoon',
+        subscribeEvents: true                         // enable cross-component events
+      };
+      viewer.render(molDiv, options);
 
-      // --- ProtVista interactive sequence like AlphaFold ---
-      // ProtVista uses UniProt accessions (without isoform suffix).
-      // If your uid is "P05067-4", ProtVista annotations usually live under "P05067".
-      const uniprotForPv = (uid || '').split('-')[0];
-      pv.setAttribute('accession', uniprotForPv);
+      // ---- 2D sequence: PDB ProtVista (custom data) ----
+      // Minimal track set—just the sequence + navigation (you can add more tracks later).
+      if (sequence && pvEl) {
+        const customData = {
+          displayNavigation: true,
+          displaySequence: true,
+          sequence,
+          length: sequence.length,
+          offset: 1,
+          tracks: [] // add domain/feature tracks later if you like
+        };
+        // Supply data to the web component
+        pvEl.viewerdata = customData; // <- per PDBe example
+      }
 
-      // Optional: wait a moment and warn if ProtVista didn’t render anything
-      setTimeout(() => {
-        // If the element size is tiny or there's no shadow DOM yet, give a gentle nudge to the user.
-        if (pv.clientHeight < 120) {
-          // Don’t overwrite real errors if any
-          if (!errEl.textContent) {
-            errEl.textContent =
-              'Note: ProtVista may not show features for some isoforms. ' +
-              'If this panel is empty for e.g. "P05067-4", try the base accession "P05067".';
-          }
-        }
-      }, 1500);
+      // Optional: basic error listener for Mol*
+      viewer.events?.loadError?.subscribe?.(() => {
+        errEl.textContent = '3D viewer failed to load this structure.';
+      });
     }
 
     load();
